build: 初始化项目

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -1,8 +1,9 @@
 @import url('./color.less');
 :root {
-    --font-xxs: 11px;
-    --font-xs: 12px;
-    --font-s: 14px;
-    --font-m: 16px;
-    --font-l: 18px;
+    --font-xxs: 22px;
+    --font-xs: 24px;
+    --font-s: 28px;
+    --font-m: 32px;
+    --font-l: 36px;
+    --input-height: 90px;
 }
