--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -1,3 +1,9 @@
+.image-inner {
+  background-color: rgb(221, 221, 221);
+  background-image: linear-gradient(45deg, rgb(255, 255, 255) 25%, transparent 0px, transparent 75%, rgb(255, 255, 255) 0px), linear-gradient(45deg, rgb(255, 255, 255) 25%, transparent 0px, transparent 75%, rgb(255, 255, 255) 0px);
+  background-position: 0px 0px, 10px 10px;
+  background-size: 20px 20px;
+}
 /* 渐变色 */
 .g-blue {
   background: linear-gradient(270deg, #007af5 0%, #00a2fa 100%) !important;
@@ -85,18 +91,21 @@ img[lazy='loaded'] {
 
 div {
   ::-webkit-scrollbar {
-    width: 2px!important;
+    width: 2px !important;
   }
   ::-webkit-scrollbar-track {
-    border-radius: 2px!important;
-    background-color: transparent!important;
+    border-radius: 2px !important;
+    background-color: transparent !important;
   }
   ::-webkit-scrollbar-thumb {
-    border-radius: 2px!important;
-    background-color: #d1d1d1!important;
+    border-radius: 2px !important;
+    background-color: #d1d1d1 !important;
   }
 }
-
+.border-radius16 {
+  border-radius: 16px;
+  overflow: hidden;
+}
 // list
 .scroll-list {
   height: 100%;
