--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -111,3 +111,7 @@ div {
   height: 100%;
   overflow-y: auto !important;
 }
+
+.box-padding {
+  padding: calc(var(--box-padding) / 2) var(--box-padding);
+}
