--- a/src/container/SearchBar/index.less
+++ b/src/container/SearchBar/index.less
@@ -1,12 +1,13 @@
 .search-bar {
-  --search-margin-top: 20%;
-  --search-radius: 50px;
-  --search-width: 88%;
   width: var(--search-width);
   max-width: 980px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: var(--search-margin-top);
+  // margin-left: auto;
+  // margin-right: auto;
+  // margin-top: var(--search-margin-top);
+  position: absolute;
+  top: var(--search-margin-top);
+  left: 50%;
+  transform: translateX(-50%);
 
   &--wrap {
     display: flex;
