feat: 增加首页快捷方式展示

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -8,4 +8,6 @@
     --input-height: 90px;
     --box-padding: 32px;
     --border-radius: 16px;
+    --icon-size: 90px;
+    --icon-radius: 50px;
 }
