--- a/src/container/SearchBar/index.less
+++ b/src/container/SearchBar/index.less
@@ -1,13 +1,14 @@
 .search-bar {
   width: var(--search-width);
   max-width: 980px;
-  // margin-left: auto;
-  // margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 32px;
   // margin-top: var(--search-margin-top);
-  position: absolute;
-  top: var(--search-margin-top);
-  left: 50%;
-  transform: translateX(-50%);
+  // position: absolute;
+  // top: var(--search-margin-top);
+  // left: 50%;
+  // transform: translateX(-50%);
 
   &--wrap {
     display: flex;
