--- a/src/container/Shortcut/index.less
+++ b/src/container/Shortcut/index.less
@@ -1,7 +1,7 @@
 .shortcut {
-  --icon-label-color: #fff;
-  --icon-row: 4;
-  --icon-colum: 4;
+  // --icon-label-color: #fff;
+  // --icon-row: 2;
+  // --icon-colum: 4;
   --row-gap: 32px;
   --icon-size: 110px;
   --icon-radius: 60px;
