✨ feat(快捷导航): 增加快捷导航增删改功能

--- a/src/container/Setting/index.less
+++ b/src/container/Setting/index.less
@@ -23,3 +23,11 @@
   font-size: var(--font-xs);
   padding: 16px 32px;
 }
+
+.button-group {
+  display: flex;
+  flex-flow: row nowrap;
+  .van-button {
+    margin: 0 8px;
+  }
+}
