🔧 build(build): 打包项目

--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -121,7 +121,7 @@ div {
   transform: translateY(-50%);
   width: 30px;
   height: 30px;
-  background: url(/image/color.png) no-repeat center;
+  background: url(../image/color.png) no-repeat center;
   background-size: contain;
 }
 
